mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mealie
  name: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      securityContext:
        fsGroup: 1003
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: psql-tls-secrets
          secret:
            defaultMode: 416
            optional: true
            secretName: psql-client-secret
        - name: data
          persistentVolumeClaim:
            claimName: mealie-data-pvc
      containers:
        - image: ghcr.io/mealie-recipes/mealie:v2.4.1
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ["ALL"]
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1003
            runAsGroup: 1003
            privileged: false
          name: mealie
          volumeMounts:
            - mountPath: "/psql-tls-secrets"
              name: psql-tls-secrets
            - mountPath: "/app/data"
              name: data
          resources:
            limits:
              memory: "1024Mi"
          ports:
          - name: http
            protocol: TCP
            containerPort: 9000
          readinessProbe:
            httpGet:
              path: /api/app/about
              port: http
